@@ -32,6 +32,7 @@ Version 2.1.2
    - Added David Smeringe to translators (was forgotten before)
    - Update: Included Dutch translation for 2.0.2 into CVS (was from 1.4.0
         before)
+   - Bugfix: Building certificate chain automatically
  * Roland Stigge
    - Bugfix: Encoding of "po/fr.po"
 
